// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label matches withError snapshot: with error mount 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
  border-left: 4px solid #b10e1e;
  margin-right: 15px;
  padding-left: 10px;
}

.emotion-0:after {
  content: '';
  display: table;
  clear: both;
}

<Styled(Label)
  error="example"
>
  <Label
    className="emotion-1"
    error="example"
  >
    <Styled(label)
      className="emotion-1"
      error="example"
    >
      <label
        className="emotion-0"
      >
        example
      </label>
    </Styled(label)>
  </Label>
</Styled(Label)>
`;

exports[`Label matches wrapper snapshot: wrapper mount 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
}

.emotion-0:after {
  content: '';
  display: table;
  clear: both;
}

<Styled(Label)>
  <Label
    className="emotion-1"
  >
    <Styled(label)
      className="emotion-1"
    >
      <label
        className="emotion-0"
      >
        example
      </label>
    </Styled(label)>
  </Label>
</Styled(Label)>
`;
